# slotforge

./: .gitignore  CMakeLists.txt  README.md
apps/cli/: main.cpp
configs/: basic_slot.txt
engine/include/slotforge/: GameEngine.hpp
engine/src/: GameEngine.cpp
